--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   background_app_bar: ^1.0.0
   carousel_slider: ^1.3.0
   flutter_gifimage: ^1.0.0
+  http:
 
   rxdart: ^0.26.0
   firebase_core: ^0.5.1
