--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -23,14 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+  flutter_localizations: 
+    sdk: flutter
+  intl:
   
   video_player: ^0.10.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
   flutter_svg: ^0.19.3
   provider: ^5.0.0
   flutter_swiper: ^1.1.6
@@ -47,6 +49,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  intl: ^0.17.0-nullsafety.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -57,6 +61,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
