--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.0.3
   flutter_localizations: 
     sdk: flutter
   intl:
@@ -44,7 +45,7 @@ dependencies:
   firebase_core: ^1.0.3
   firebase_auth: ^1.1.0
   
- 
+
 
 dev_dependencies:
   flutter_test:
