--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
 
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
@@ -66,6 +67,10 @@ flutter:
   uses-material-design: true
   generate: true
 
+flutter_icons:
+  image_path: 'assets/images/icon.png'
+  android: true
+  ios: true
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
