--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -54,9 +54,9 @@ dev_dependencies:
   flutter_launcher_icons: ^0.7.4
 
 flutter_icons:
-  image_path: 'assets/icons/icon.png'
-  android: true
+  android: 'launcher_icon'
   ios: true
+  image_path: 'assets/icons/icon.png'
   adaptive_icon_background: 'assets/icons/icon.png'
 
 
