--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -56,8 +56,8 @@ dev_dependencies:
 flutter_icons:
   android: 'launcher_icon'
   ios: true
-  image_path: 'assets/icons/icon.png'
-  adaptive_icon_background: 'assets/icons/icon.png'
+  image_path: 'assets/icons/splas.png'
+  adaptive_icon_background: 'assets/icons/splas.png'
 
 
 dependency_overrides:
