--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -79,7 +79,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
-    - data/requisitos_opt.json
+    - data/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
