--- a/app_comfenalco/android/app/src/debug/AndroidManifest.xml
+++ b/app_comfenalco/android/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app_comfenalco">
+    package="com.comfenalco_subsidios_app_usb.app_comfenalco">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
