--- a/app_comfenalco/android/app/src/main/AndroidManifest.xml
+++ b/app_comfenalco/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app_comfenalco">
+    package="com.comfenalco_subsidios_app_usb.app_comfenalco">
     <uses-permission android:name="android.permission.INTERNET"/>
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
         calls FlutterMain.startInitialization(this); in its onCreate method.
