--- a/app_comfenalco/pubspec.yaml
+++ b/app_comfenalco/pubspec.yaml
@@ -23,30 +23,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.3
-  flutter_localizations: 
+  flutter_localizations:
     sdk: flutter
-  intl:
-  
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.19.3
-  provider: ^5.0.0
-  flutter_swiper: ^1.1.6
   background_app_bar: ^1.0.0
   carousel_slider: ^1.3.0
-  flutter_gifimage: ^1.0.0
-  http:
-  rxdart: ^0.26.0
-  firebase_core: ^1.0.3
+  cupertino_icons: ^1.0.2
   firebase_auth: ^1.1.0
+  firebase_core: ^1.0.3
+  firebase_messaging: ^10.0.0
+  flutter_gifimage: ^1.0.0
+  flutter_svg: ^0.19.3
+  flutter_swiper: ^1.1.6
+  http: null
+  intl: null
   liquid_progress_indicator: ^0.3.2
-
-  
-
+  provider: ^5.0.0
+  rxdart: ^0.26.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -59,12 +52,10 @@ flutter_icons:
   image_path: 'assets/icons/splas.png'
   adaptive_icon_background: 'assets/icons/splas.png'
 
-
 dependency_overrides:
   intl: ^0.17.0-nullsafety.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -74,7 +65,6 @@ flutter:
   uses-material-design: true
   generate: true
 
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
@@ -83,10 +73,8 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
