--- a/app_comfenalco/android/app/src/main/AndroidManifest.xml
+++ b/app_comfenalco/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="app_comfenalco"
+        android:label="Subsidios Comfenalco"
         android:icon="@mipmap/launcher_icon"
         
         android:usesCleartextTraffic="true">
